Kickstart 4.2.0
================================================================================
~ Flatten the design
# [LOW] The Import from URL feature couldn't find the Joomla! download URL after the changes made to joomla.org

Kickstart 4.1.4
================================================================================
+ Support for JPS format version 1.10

Kickstart 4.1.2
================================================================================
+ By default hide fine tuning options
+ Better detection of the directory holding the archives and the best choice for a temporary directory
# [MEDIUM] Extracting symlinks in Dry Run mode would cause existing symlinks to be removed
# [MEDIUM] FTP/SFTP browser would fail on some servers when you don't provide a starting directory
# [LOW] Kickstart won't start on servers with problematic open_basedir restrictions
# [LOW] PHP notices when extracting symlinks
# [LOW] No error message shown when the server throws an error (thanks, Carlos!)
# [LOW] Wrong offset reported when an archive cannot be extracted

Kickstart 4.1.1
================================================================================
~ Reset OPcache after removing the installation directory

Kickstart 4.1.0
================================================================================
+ Kickstart displays a more insightful error message if the archive file cannot be opened for reading.
# [LOW] A .user.ini file in the archive file could get in the way of the extraction. Now it gets the same treatment as php.ini and .htaccess files.
# [LOW] If you have both kickstart.php and a renamed copy (e.g. x.php) and try to access the renamed copy you get a Fatal Error.
# [HIGH] Contrary to what was promised, you could not really extract archives in a directory other than the one Kickstart is in.

Kickstart 4.0.0
================================================================================