@@ -125,6 +125,7 @@ class AKText extends AKAbstractObject
 		'RELOAD_ARCHIVES'	=> 'Reload',
 		'CONFIG_UI_SFTPBROWSER_TITLE'	=> 'SFTP Directory Browser',
 		'ERR_COULD_NOT_OPEN_ARCHIVE_PART' => 'Could not open archive part file %s for reading. Check that the file exists, is readable by the web server and is not in a directory made out of reach by chroot, open_basedir restrictions or any other restriction put in place by your host.',
+		'RENAME_FILES' => 'Rename server configuration files'
 	);
 
 	/**
