@@ -1,5 +1,6 @@
 Kickstart 4.2.0
 ================================================================================
++ Option to not rename the .htaccess file before extraction. WARNING: MAY BREAK THE EXTRACTION!
 ~ Flatten the design
 # [LOW] The Import from URL feature couldn't find the Joomla! download URL after the changes made to joomla.org
 
